--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed:secciones": "bun prisma/seed-secciones.ts",
+    "seed:secciones-reales": "bun prisma/seed-secciones-reales.ts",
+    "seed:secciones-especificas": "bun prisma/seed-secciones-especificas.ts",
+    "seed:all": "bun prisma/seed-all.ts"
   },
   "dependencies": {
     "@auth/core": "latest",
@@ -34,6 +38,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-auth": "latest",
@@ -59,6 +64,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
