--- a/package.json
+++ b/package.json
@@ -11,53 +11,74 @@
     "seed:secciones": "bun prisma/seed-secciones.ts",
     "seed:secciones-reales": "bun prisma/seed-secciones-reales.ts",
     "seed:secciones-especificas": "bun prisma/seed-secciones-especificas.ts",
-    "seed:all": "bun prisma/seed-all.ts"
+    "seed:all": "bun prisma/seed-all.ts",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@auth/core": "latest",
     "@auth/prisma-adapter": "latest",
-    "@hookform/resolvers": "latest",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "latest",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-aspect-ratio": "^1.1.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.7",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-menubar": "^1.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.2",
     "@types/leaflet": "^1.9.17",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "latest",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
+    "cmdk": "^1.0.4",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.1",
     "input-otp": "1.4.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-auth": "latest",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "nodemailer": "latest",
     "prisma": "latest",
     "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.55.0",
     "react-leaflet": "latest",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
+    "recharts": "^2.15.0",
+    "shadcn": "2.3.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.5",
-    "vaul": "^0.9.6",
-    "zod": "latest"
+    "vaul": "^0.9.9",
+    "zod": "^3.24.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
