--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-toggle": "^1.1.3",
+    "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-table": "^8.21.2",
     "@types/leaflet": "^1.9.17",
+    "@types/next-auth": "^3.15.0",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "latest",
@@ -60,9 +63,10 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
-    "next-auth": "latest",
+    "next-auth": "4",
     "next-themes": "^0.4.6",
     "nodemailer": "latest",
+    "papaparse": "^5.5.2",
     "prisma": "latest",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -87,6 +91,7 @@
     "@eslint/eslintrc": "^3",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
