--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^12.6.5",
     "input-otp": "1.4.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
